syntax = "proto3";

package upload;

service UploadService {
    rpc UploadFile(stream UploadRequest) returns (UploadResponse);
}

message UploadRequest {
    bytes data = 1;
    string filename = 2;
}

message UploadResponse {
    string id = 1;
}